Fixed code style